<resources>
    <string name="app_name">RazaFirstAssesment</string>
    <string name="welcome">Welcome Back!</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="labelusername">Username</string>
    <string name="labelpassword">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="string_forgot_password">Forgot Password</string>
    <string name="login_btn">Login</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="sing_up_link">Sing Up</string>
    <string name="sing_up">Lets get started!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_link">login</string>

    <string name="heading2">FORGET\nPASSWORD</string>
    <string name="ForgetP_detail">Provide your account\'s mail for which you want\nto reset your password!</string>
    <string name="next">Next</string>
    <string name="heading_home">HOME</string>
</resources>