<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">


    <ImageView
        android:id="@+id/pic_login"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_signup_pic" />

    <TextView
        android:id="@+id/heading_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/pic_login"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"

        android:fontFamily="@font/rajdhani_bold"
        android:text="@string/sing_up"
        android:textColor="@color/MyPatternCol"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/FName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/heading_signup"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_stroke"
        android:hint="@string/first_name"

        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColorHint="@color/half_white"

        />

    <EditText
        android:id="@+id/LName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/FName"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_stroke"
        android:hint="@string/last_name"

        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColorHint="@color/half_white"

        />

    <EditText
        android:id="@+id/EmailSignup"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/LName"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_stroke"
        android:hint="@string/email"

        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColorHint="@color/half_white"

        />

    <EditText
        android:id="@+id/PassSignup"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/EmailSignup"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_stroke"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColorHint="@color/half_white"

        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PassSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">


        <RadioButton
            android:id="@+id/radioBtnMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:fontFamily="@font/yanonekaffeesatz_bold"
            android:text="@string/male"
            android:textColor="@color/MyPatternCol"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radioBtnFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginTop="-32dp"

            android:fontFamily="@font/yanonekaffeesatz_bold"
            android:text="@string/female"
            android:textColor="@color/MyPatternCol"
            android:textSize="22sp"

            />

    </RadioGroup>


    <Button
        android:id="@+id/signup_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="30dp"
        android:background="@drawable/roundbtn"
        android:backgroundTint="@color/MyPatternCol"
        android:fontFamily="@font/rajdhani_bold"
        android:onClick="SignUp"
        android:text="@string/sign_up"

        android:textSize="20sp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"

        android:layout_below="@id/signup_btn"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"

        />

    <TextView
        android:id="@+id/loginlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_btn"

        android:layout_marginStart="265dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_link"

        android:textColor="@color/slate_blue"

        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/ic_wave_pic"
        android:layout_below="@+id/loginlink"
        />



</RelativeLayout>




