<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgetPaaword">



    <ImageView
        android:id="@+id/img_ForgotPass"
        android:layout_width="350dp"
        android:layout_height="300sp"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="30sp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_forgot_password"

        />

    <TextView
        android:id="@+id/Forget_Pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_ForgotPass"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/heading2"
        android:textAlignment="center"
        android:textColor="@color/MyPatternCol"
        android:textSize="35sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/ForgetP_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Forget_Pass"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="5sp"
        android:text="@string/ForgetP_detail"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/EmailForget"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/ForgetP_detail"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_stroke"
        android:hint="@string/email"

        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColorHint="@color/half_white"

        />

    <Button
        android:id="@+id/Fpass_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EmailForget"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="30dp"
        android:background="@drawable/roundbtn"
        android:backgroundTint="@color/MyPatternCol"
        android:fontFamily="@font/rajdhani_bold"
        android:text="@string/next"

        android:textSize="20sp"

        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/ic_wave_pic"
        android:layout_below="@+id/Fpass_btn"
        />


</RelativeLayout>